# token-acl-gate

./: Cargo.toml  codama.ts  package.json  pnpm-lock.yaml  readme.md
.github/workflows/: publish-packages.yml  rust-build.yml  rust-publish.yml  ts-build.yml
.github/workflows/actions/install-dependencies/: action.yml
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml  idl.json
program/src/: error.rs  lib.rs
program/src/instructions/: add_wallet.rs  can_thaw_permissionless.rs  create_list.rs  delete_list.rs  remove_wallet.rs  setup_extra_metas.rs
program/src/state/: list_config.rs  mod.rs
sdk/rust/: Cargo.toml
sdk/rust/tests/: allow_eoa_list_test.rs  allow_list_test.rs  basic.rs  block_list_test.rs  composite_list_test.rs  program_test.rs
sdk/ts/: .prettierrc.json  package.json  pnpm-lock.yaml  tsup.config.ts
