[workspace]
members = ["program", "cli", "sdk/rust"]
resolver = "2"


[workspace.dependencies]
token-acl-gate-client = { path = "sdk/rust"}
solana-account-info = "2.3.0"
solana-cpi = "2.2.1"
solana-decode-error = "2.3.0"
solana-instruction = { version = "=2.3.3", features = ["std"] }
solana-program-error = "2.2.2"
solana-pubkey = { version = "2.3.0", features = ["curve25519", "borsh"] }
solana-program-option = "2.2.1"
solana-keypair = "2.2.3"
solana-program = "2.3.0"
solana-rent = "2.2.1"
solana-system-interface = "1.0.0"
solana-sysvar = "2.3.0"
solana-msg = "2.2.1"
solana-client = "2.3.13"
solana-program-test = "2.3.13"
solana-program-entrypoint = "2.3.0"
solana-program-runtime = "2.3.13"
solana-program-pack = "2.2.1"
spl-discriminator = "0.4.0"
spl-program-error = "0.7.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-sdk = "2.3.1"
spl-associated-token-account-client = "2.0.0"
token-acl-interface = { git = "https://github.com/solana-foundation/token-acl", rev = "1f5c16f" }
token-acl-client = { git = "https://github.com/solana-foundation/token-acl", rev = "1f5c16f" }
token-acl = { git = "https://github.com/solana-foundation/token-acl", rev = "1f5c16f", features = [
    "no-entrypoint",
] }