[package]
name = "token-acl-gate-cli"
version = { workspace = true }
description = "A CLI app to interact with the Token ACL Gate smart contract on solana!"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "2.2.0"
solana-cli-config = "2.2.0"
solana-client = "2.2.0"
solana-logger = "2.2.0"
solana-remote-wallet = "2.2.0"
solana-sdk = "2.2.0"
spl-token-client = { version = "0.13.0" }
tokio = { version = "1", features = ["full"] }
token-acl-gate-client = { workspace = true }
spl-tlv-account-resolution = "0.8.1"
spl-transfer-hook-interface = { version = "0.8.2" }
token-acl-client = { workspace = true }
token-acl-interface = { workspace = true }



[[bin]]
name = "token-acl-gate-cli"
path = "src/main.rs"