[package]
name = "token-acl-gate-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "token_acl_gate_program"

[dependencies]
bytemuck = "1.23.0"
pinocchio = "0.9.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-log = "0.5.0"
spl-discriminator = "0.4.0"
spl-tlv-account-resolution = "0.10.0"

token-acl-interface = { workspace = true }
token-acl = { workspace = true, features = [
    "no-entrypoint",
] }
solana-curve25519 = "2.2.1"