[package]
name = "token-acl-gate-client"
version = "0.1.0"
description = "A rust library for the Token ACL Gate program with generated client code."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "token_acl_gate_client"

[features]
default = []

[dependencies]
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-account-info = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-cpi = { workspace = true }
kaigan = ">=0.2.6"
borsh = "^0.10"
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
litesvm = "0.7.1"
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-client  = { workspace = true }
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
solana-compute-budget-interface = "2.2.1"
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
solana-keypair = { workspace = true }
solana-program-entrypoint = { workspace = true }
spl-discriminator = { workspace = true }
spl-program-error = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-pod = { workspace = true }
thiserror = "2.0"
borsh = "^0.10"
token-acl-interface = { workspace = true }
token-acl = { workspace = true }
token-acl-client = { workspace = true }